--- a/src/Program/Program.csproj
+++ b/src/Program/Program.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Library\Library.csproj" />
+    <ProjectReference Include="..\..\..\PII_TwitterApi\src\Library\Library.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
